tools/tests/errors/surf_sw_06.ki
# two Float case labels of the same value are a duplicate
switch 1.0:
    case 2.0:
        discard 1
    case 2.0:
        discard 2
